# DiscoPlayer

./: .gitignore  README.md  README_zh.md  TODO.MD  makefile  root.mk  test.cpp
.VSCodeCounter/: details.md  results.csv  results.md  results.txt
clock/: AudioMasterSyncStrategy.cpp  AudioMasterSyncStrategy.h  CMakeLists.txt  Clock.cpp  Clock.h  SyncClockManager.cpp  SyncClockManager.h  SyncStrategy.cpp  SyncStrategy.h  VideoMasterSyncStrategy.cpp  VideoMasterSyncStrategy.h  disco_clock.mk
codec/: CMakeLists.txt  CodecHeader.h  ConcurrentCachePool.h  ConcurrentQueue.cpp  ConcurrentQueue.h  FrameConcurrentCachePool.cpp  FrameConcurrentCachePool.h  FrameQueue.cpp  FrameQueue.h  FrameReader.cpp  FrameReader.h  FrameWrapper.h  Makefile  MediaDecoder.cpp  MediaDecoder.h  PacketConcurrentCachePool.cpp  PacketConcurrentCachePool.h  PacketQueue.cpp  PacketQueue.h  disco_codec.mk
common/: CMakeLists.txt  disco_common.mk
common/cache/: ConcurrentCachePool.cpp  ConcurrentCachePool.h
common/log/: Log.cpp  Log.h
common/structure/: ConcurrentQueue.cpp  ConcurrentQueue.h
common/thread/: Cond.cpp  Cond.h  CondProcessor.cpp  CondProcessor.h  Mutex.cpp  Mutex.h  ParamableThread.cpp  ParamableThread.h  Semaphore.cpp  Semaphore.h  ThreadUtils.cpp  ThreadUtils.h
common/type/: NumberUtils.cpp  NumberUtils.h
dependency/libyuv/debug/: libyuv.dylib  yuvconvert
dependency/sound-touch/2.1.2/: INSTALL_RECEIPT.json
dependency/sound-touch/2.1.2/.brew/: sound-touch.rb
dependency/sound-touch/2.1.2/include/soundtouch/: soundtouch_config.h
dependency/sound-touch/2.1.2/lib/: libSoundTouch.1.dylib
dependency/sound-touch/2.1.2/lib/pkgconfig/: soundtouch.pc
platform/mac/: CMakeLists.txt  DiscoMainWindow.cpp  DiscoMainWindow.h  MacDiscoPlayer.cpp  MacDiscoPlayer.h  OpenGLRenderWidget.cpp  OpenGLRenderWidget.h  PlayrerStateChangedEvent.cpp  PlayrerStateChangedEvent.h  QRenderWidget.cpp  QRenderWidget.h  QSeekBar.h  QtTest.cpp  SDLAudioDevice.cpp  SDLAudioDevice.h  SDLMixAudioDeviceBufferProcessor.cpp  SDLMixAudioDeviceBufferProcessor.h  SDLRenderView.cpp  SDLRenderView.h  build.sh  debugwidget.cpp  debugwidget.h  disco_player_mac.mk  mainwindow.cpp  mainwindow.h  test.cpp
platform/mac/resources/: debugwidget.ui  mainwindow.ui  resource.qrc
platform/mac/shader/: YUV2RGB.frag  YUV2RGB.vert
player/: ActivateNodeManager.cpp  ActivateNodeManager.h  BaseState.h  CMakeLists.txt  CorePlayer.cpp  CorePlayer.h  CorePlayerStateChangedListener.h  DebugInfo.h  IDiscoPlayer.h  PlayItem.cpp  PlayItem.h  PlayingState.cpp  PlayingState.h  RenderSynchronizer.cpp  RenderSynchronizer.h  RenderSynchronizerFinishListener.h  StateChangedListener.h  StateManager.cpp  StateManager.h  disco_player.mk
player/common/: IDiscoPlayer.h  PlayItem.cpp  PlayItem.h
player/platform/mac/: MacDiscoPlayer.cpp  MacDiscoPlayer.h  SDLAudioDevice.cpp  SDLAudioDevice.h  SDLRenderView.cpp  SDLRenderView.h  disco_player_mac.mk  test.cpp
player/state/: BaseState.h  CompleteState.cpp  CompleteState.h  EndState.cpp  EndState.h  InitState.cpp  InitState.h  PauseState.cpp  PauseState.h  PlayerStateEnum.h  PlayingState.cpp  PlayingState.h  PreparedState.cpp  PreparedState.h  ReleaseState.cpp  ReleaseState.h  SeekingState.cpp  SeekingState.h  StateChangedListener.h  StateManager.cpp  StateManager.h  StopState.cpp  StopState.h
render/: CMakeLists.txt  disco_render.mk
render/audio/: AudioClip.cpp  AudioClip.h  AudioDataRequestListener.h  AudioDevice.cpp  AudioDevice.h  AudioDeviceBuffer.cpp  AudioDeviceBuffer.h  AudioDeviceBufferProcessor.cpp  AudioDeviceBufferProcessor.h  AudioDeviceLastBufferProcessor.cpp  AudioDeviceLastBufferProcessor.h  AudioFillBufferListener.h  AudioFrameTransformer.cpp  AudioFrameTransformer.h  AudioRender.cpp  AudioRender.h  AudioTransformNode.h  AudioTransformProcessor.cpp  AudioTransformProcessor.h  CMakeLists.txt  SoundTouchDeviceBufferProcessor.cpp  SoundTouchDeviceBufferProcessor.h  WavFile.cpp
render/video/: AsynRenderRefreshListener.h  CMakeLists.txt  FrameTransform.cpp  FrameTransform.h  IRenderView.h  Image.cpp  Image.h  ImageCachePool.cpp  ImageCachePool.h  ImageQueue.cpp  ImageQueue.h  RenderView.cpp  RenderView.h  SuperResolutionTransformProcessor.cpp  SuperResolutionTransformProcessor.h  TransformNode.h  TransformNodeCachePool.cpp  TransformNodeCachePool.h  TransformNodeQueue.cpp  TransformNodeQueue.h  TransformPorcessor.cpp  TransformPorcessor.h  VideoFrameTransformer.cpp  VideoFrameTransformer.h  VideoHeader.h  VideoRender.cpp  VideoRender.h  VideoRenderTransformProcessor.cpp  VideoRenderTransformProcessor.h  VideoTransformNode.h  VideoTransformProcessor.cpp  VideoTransformProcessor.h  YUV2RGBTransformProcessor.cpp  YUV2RGBTransformProcessor.h
stream/: CMakeLists.txt  IReader.h  IStreamIterator.h  InputStreamIterator.cpp  InputStreamIterator.h  MediaInputStream.cpp  MediaInputStream.h  PacketReader.cpp  PacketReader.h  PacketWrapper.h  Reader.cpp  Reader.h  disco_stream.mk
